--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "emailjs": "^4.0.3",
     "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-credit-cards-2": "^1.0.2",
