--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.7",
     "emailjs": "^4.0.3",
     "firebase": "^10.8.0",
+    "json-server": "^1.0.0-beta.3",
     "react": "^18.2.0",
     "react-credit-cards-2": "^1.0.2",
     "react-dom": "^18.2.0",
